# claudes-workshop

./: CLAUDE.md  LICENSE  README.md
scripts/: new-project.sh
templates/python/: CLAUDE.md  README.md  SPEC.md  pyproject.toml
templates/python/src/package/: __init__.py
templates/python/tests/: test_smoke.py
