[project]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
description = "TODO: one-line description of {{PROJECT_NAME}}."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

# Expose a CLI entry point once the tool has one. Adjust or remove as needed.
# [project.scripts]
# {{PROJECT_NAME}} = "{{PACKAGE_NAME}}.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{PACKAGE_NAME}}"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
